<resources>
    <string name="app_name">Toot-orino</string>
    <string name="search_tag">Search</string>
    <string name="schedule_tag">Schedule</string>
    <string name="switch_tag_student">Student mode</string>
    <string name="main_text">What are you interested in?</string>
    <string name="main_subtext">You can toggle this easily anytime.</string>
    <string name="tutor_btn_text">I am a tutor</string>
    <string name="student_btn_text">I am a student</string>
    <string name="activity_tag">Activity</string>
    <string name="scheduling_tag">Scheduling</string>
    <string name="switch_tag_tutor">Tutor mode</string>
    <string name="requests_tag">Requests</string>
    <string name="mon_text">Mon</string>
    <string name="day_text">Mon</string>
    <string name="date_text">31</string>
    <string name="request_timeslot">Request timeslot</string>
    <string name="upcoming_timeslots">Upcoming timeslots</string>
    <string name="cancel_timeslot">Cancel</string>
    <string name="hourly_charge_rate">Hourly charge</string>
    <string name="name_of_subject">Subject</string>
    <string name="location_of_lesson">Lesson location</string>
    <string name="details">Details</string>
    <string name="newTS_tag">New timeslot</string>
</resources>