<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutor.SchedulingActivityTutor">

    <RelativeLayout
        android:id="@+id/toolbar_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_tag_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:text="@string/activity_tag"
            android:textColor="@color/gray"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/scheduling_tag_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/activity_tag_tutor"
            android:padding="5dp"
            android:text="@string/scheduling_tag"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@mipmap/settings_icon_round" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_student">

        <RelativeLayout
            android:id="@+id/first_input_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="5dp"
            >

            <EditText
                android:id="@+id/subject_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:hint="@string/name_of_subject"
                android:inputType="text"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/hourly_rate_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/hourly_charge_rate"
                android:inputType="text"
                android:textSize="30dp"
                android:layout_marginRight="30dp"

                />
        </RelativeLayout>

        <TextView
            android:id="@+id/date_picker_scheduling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Date:"
            android:textSize="30dp"
            android:layout_below="@id/first_input_line"
            android:layout_centerInParent="true"
            />

        <Button
            android:id="@+id/date_pick_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_picker_scheduling"
            android:textColor="@color/black"
            android:textSize="30dp"
            style="?android:spinnerStyle"
            android:layout_centerInParent="true"
            android:onClick="openDatePicker"
            android:gravity="center"
            />


        <RelativeLayout
            android:id="@+id/second_input_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_pick_btn"
            android:layout_marginVertical="5dp"
            >

            <EditText
                android:id="@+id/location_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/location_of_lesson"
                android:textSize="30dp"
                android:layout_marginLeft="30dp"
                />

            <EditText
                android:id="@+id/start_hour_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/seperator"
                android:hint="H"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/seperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/start_minutes_input"
                android:text=":"
                android:textSize="30dp"
                android:padding="1dp"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/start_minutes_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="MM"
                android:layout_marginRight="30dp"
                android:textSize="30dp"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/details_input"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/second_input_line"
            android:gravity="start"
            android:textSize="25dp"
            android:hint="@string/details"
            android:layout_marginHorizontal="30dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/tutor_main_blue"
        android:padding="10dp">

        <TextView
            android:id="@+id/switch_tag_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/switch_tag_tutor"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:layout_toEndOf="@+id/switch_tag_tutor"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@drawable/switch_icon" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>