<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivityStudent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/toolbar_student"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/search_tag_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:text="@string/search_tag"
            android:textColor="@color/gray"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/schedule_tag_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/search_tag_student"
            android:padding="5dp"
            android:text="@string/schedule_tag"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@mipmap/settings_icon_round" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/upcoming_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_student"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_timeslots"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/upcoming_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule_student_recycle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scrollbars="vertical"
            ></androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/student_main_blue"
        android:padding="10dp">

        <TextView
            android:id="@+id/switch_tag_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/switch_tag_student"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>