<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutor.MainActivityTutor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/toolbar_student"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/activity_tag_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:text="@string/activity_tag"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/scheduling_tag_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/activity_tag_tutor"
            android:padding="5dp"
            android:text="@string/scheduling_tag"
            android:textColor="@color/gray"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@mipmap/settings_icon_round" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/requests_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_student"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requests_tag"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/requests_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timeslots_tutor_recycle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scrollbars="vertical"
            ></androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/tutor_main_blue"
        android:padding="10dp">

        <TextView
            android:id="@+id/switch_tag_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/switch_tag_tutor"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:layout_toEndOf="@+id/switch_tag_tutor"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@drawable/switch_icon" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
